# honeypot-rs

./: .gitignore  Cargo.toml  README.md  Vagrantfile  example.config.toml
src/: capture.rs  config.rs  main.rs  packets.rs
vagrant/: README.md  honeypot-rs.yml
vagrant/honeypot-rs/: config.toml.jinja2  honeypot-rs.service
