[package]
name = "honeypot-rs"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
repository = "https://github.com/myOmikron/honeypot-rs"
authors = ["Niklas Pfister <git@omikron.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Cli parser
clap = { version = "~4", features = ["derive"] }

# Logging
log = { version = "~0.4" }
env_logger = { version = "~0.10" }

# Packet capturing library
pcap = { version = "~1", features = ["capture-stream"] }

# Http request library
reqwest = { version = "~0.11" }

# Serialization library
serde = { version = "~1", features = ["derive"] }
toml = { version = "~0.7" }

# Parse captured packets
etherparse = { version = "~0.13" }

# Async runtime
tokio = { version = ">=1.23.1", features = ["sync", "rt-multi-thread", "net", "macros"] }
futures = { version = "~0.3" }